--- a/_posts/2024-05-27-spectacle-2024.md
+++ b/_posts/2024-05-27-spectacle-2024.md
@@ -1,11 +1,12 @@
 ---
 layout: post
-title: filenphotos au Fort Carré
+title: Filenphotos au Fort Carré
 date: 2024-09-12T00:00:00.000+00:00
 
 ---
 
-Test premier post
+
+Nous serons au salon des loisirs créatifs autour du fil du 27 septembre au 29 septembre à Antibes. Toutes les infos [_ici_](https://www.antibes-juanlespins.com/information/agenda/3e-salon-des-loisirs-creatifs-autour-du-fil).
 
 ![](/images/salon_2024.jpg)
 
