Fix with lighter image

--- a/_posts/2024-09-22-les-kits.md
+++ b/_posts/2024-09-22-les-kits.md
@@ -8,6 +8,6 @@ date: 2024-09-12T00:00:00.000+00:00
 
 Les kits sont prêts pour le salon ! Ils sont aussi en ligne, n’hésitez pas à aller regarder ma première <a href="https://www.filenphotos.fr/kit">collection</a> !
 
-![](/images/pour_commencer.jpg)
+![](/images/pour_commencer_DxO.jpg)
 
 N’hésitez pas à venir me rencontrer au Fort Carré ce week-end ou à réagir sur Instagram !
